--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-refresh": "^0.8.0",
+    "@cljs-oss/module-deps": "^1.1.1",
     "shadow-cljs": "^2.8.83",
     "showdown": "^1.9.1"
   }
