--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "",
   "license": "EPL-2.0",
   "dependencies": {
+    "karma": "^5.0.2",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-cljs-test": "^0.1.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-refresh": "^0.8.0",
-    "shadow-cljs": "^2.8.83",
+    "shadow-cljs": "^2.8.109",
     "showdown": "^1.9.1"
   }
 }
