--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,8 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
     - uses: actions/setup-java@v1
+      with:
+        java-version: 11
     - name: Setup Node.js environment
       uses: actions/setup-node@v1.4.2
       #with:
