--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-name: test
+name: CI
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -12,7 +12,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  build-and-test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -40,3 +40,6 @@ jobs:
 
     - name: Compile CLJS tests
       run: npx shadow-cljs compile ci
+    
+    - name: Run CLJS tests
+      run: npx karma start --single-run
