--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "EPL-2.0",
   "dependencies": {
+    "@cljs-oss/module-deps": "^1.1.1",
     "karma": "^5.0.2",
     "karma-chrome-launcher": "^3.1.0",
     "karma-cljs-test": "^0.1.0",
