--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ node_modules
 /pom.xml
 /target
 .clj-kondo/.cache
+.lsp/.cache
 .cpcache
 
 # clojure-lsp will automatically copy the following from resources to here at runtime
