Refine development setup
Makes it easy to spin up a shadow-cljs dev server using a fixed shadow-cljs version (not easily shadowed by a global install), and cider-nrepl latest.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ node_modules
 .clj-kondo/.cache
 .lsp/.cache
 .cpcache
+.make_npm
 
 # clojure-lsp will automatically copy the following from resources to here at runtime
 .clj-kondo/lilactown/helix/*
