--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-refresh": "^0.13.0",
-    "shadow-cljs": "^2.15.12",
+    "shadow-cljs": "^2.25.8",
     "showdown": "^1.9.1"
+  },
+  "scripts": {
+    "shadow-cljs": "shadow-cljs"
   }
 }
