--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "clojure -M:test"
   },
   "author": "",
   "license": "EPL-2.0",
   "dependencies": {
-    "karma": "^5.0.2",
-    "karma-chrome-launcher": "^3.1.0",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "^3.2.0",
     "karma-cljs-test": "^0.1.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-refresh": "^0.13.0",
-    "shadow-cljs": "^2.15.12",
-    "showdown": "^1.9.1"
+    "react-refresh": "^0.17.0",
+    "shadow-cljs": "^3.1.7",
+    "showdown": "^2.1.0"
   }
 }
