--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,20 +19,21 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-    - uses: actions/setup-java@v1
+    - uses: actions/checkout@v3
+    - uses: actions/setup-java@v4
       with:
-        java-version: 11
-    - uses: DeLaGuardo/setup-clojure@5.0
+        distribution: 'temurin'
+        java-version: '21'
+    - uses: DeLaGuardo/setup-clojure@13.4
       with:
-        cli: '1.10.1.727'
+        cli: '1.11.2.1446'
     - name: Setup Node.js environment
-      uses: actions/setup-node@v3.8.1
-      #with:
+      uses: actions/setup-node@v4
+      with:
         # Set always-auth in npmrc
         #always-auth: # optional, default is false
         # Version Spec of the version to use.  Examples: 10.x, 10.15.1, >=10.15.0
-        #node-version: # optional, default is 10.x
+        node-version: 24
         # Optional registry to set up for auth. Will set the registry in a project level .npmrc and .yarnrc file, and set up auth to read in from env.NODE_AUTH_TOKEN
         #registry-url: # optional
         # Optional scope for authenticating against scoped registries
